--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.4.7",
     "postcss": "^8.5.0",
