--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
     "framer-motion": "^12.4.7",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
