--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.1",
