--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^12.4.7",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
